spec/e2e/function/invalid_name.lit
fn "asdf" # error: [line 1] Syntax error at "asdf": I was expecting a name or block after the 'fn' keyword.
